--- a/react_native/.gitignore
+++ b/react_native/.gitignore
@@ -123,3 +123,18 @@ package-lock.json
 
 # Android memory profiler files
 *.hprof
+
+node_modules/
+.expo/
+dist/
+npm-debug.*
+*.jks
+*.p8
+*.p12
+*.key
+*.mobileprovision
+*.orig.*
+web-build/
+
+# macOS
+.DS_Store
