--- a/Flutter/advisor/pubspec.yaml
+++ b/Flutter/advisor/pubspec.yaml
@@ -31,6 +31,9 @@ dependencies:
     sdk: flutter
   bloc: ^8.0.3
   flutter_bloc: ^8.0.1
+  dartz: ^0.10.1
+  http: ^0.13.4
+  get_it: ^7.2.0
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
