--- a/Flutter/advisor/pubspec.yaml
+++ b/Flutter/advisor/pubspec.yaml
@@ -34,6 +34,9 @@ dependencies:
   dartz: ^0.10.1
   http: ^0.13.4
   get_it: ^7.2.0
+  mockito: ^5.1.0
+  equatable: ^2.0.3
+  build_runner: ^2.1.10
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
