--- a/Flutter/advisor/pubspec.yaml
+++ b/Flutter/advisor/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
   mockito: ^5.1.0
   equatable: ^2.0.3
   build_runner: ^2.1.10
+  shared_preferences: ^2.0.13
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
