--- a/Flutter/advisor/pubspec.yaml
+++ b/Flutter/advisor/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   equatable: ^2.0.3
   build_runner: ^2.1.10
   shared_preferences: ^2.0.13
+  provider: ^6.0.2
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
