--- a/Flutter/todo/pubspec.yaml
+++ b/Flutter/todo/pubspec.yaml
@@ -34,6 +34,12 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
+  flutter_bloc: ^8.0.1
+  bloc: ^8.0.3
+  get_it: ^7.2.0
+  firebase_auth: ^3.3.17
+  firebase_core: ^1.16.0
+  cloud_firestore: ^3.1.14
 
 dev_dependencies:
   flutter_test:
