--- a/Flutter/todo/pubspec.yaml
+++ b/Flutter/todo/pubspec.yaml
@@ -41,6 +41,8 @@ dependencies:
   firebase_core: ^1.16.0
   cloud_firestore: ^3.1.14
   dartz: ^0.10.1
+  auto_route: ^3.2.4
+  uuid: ^3.0.6
 
 dev_dependencies:
   flutter_test:
@@ -52,6 +54,8 @@ dev_dependencies:
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
   flutter_lints: ^1.0.0
+  auto_route_generator: ^3.2.3
+  build_runner: ^2.1.10
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
