--- a/node_express/t1/package.json
+++ b/node_express/t1/package.json
@@ -7,8 +7,7 @@
     "build": "tsc",
     "prestart": "npm run build",
     "start": "node .",
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "./node_modules/nodemon/bin/nodemon.js"
+    "dev": "ts-node-dev ./src/index.ts"
   },
   "license": "MIT",
   "dependencies": {
