--- a/node_express/t2/package.json
+++ b/node_express/t2/package.json
@@ -24,7 +24,7 @@
     "@types/express": "^4.17.13",
     "@types/node": "^17.0.35",
     "nodemon": "^2.0.16",
-    "ts-node-dev": "^1.1.8",
+    "ts-node-dev": "2.0.0-0",
     "typescript": "^4.7.2"
   }
 }
